# Outskill-C5-G2

./: .env.example  .gitignore  ARCHITECTURE.md  CODE.md  FEATURES.md  PRD.md  README.md  app.py  pyproject.toml  requirements.txt
agents/: Agents.md  analyst.py  insight.py  planner.py  reporter.py  retriever.py
core/: CORE.md  graph.py  state.py
llm/: LLM.md  README.md  openrouter.py
tests/: TESTS.md  __init__.py  test_app.py  test_vector_store.py
tools/: README.md  TOOLS.md  __init__.py  arxiv_search.py  vector_store.py  web_search.py
