[project]
name = "autonomous-research-assistant"
version = "0.1.0"
description = "Autonomous Multi-Agent Research Assistant using LangGraph and ChromaDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-text-splitters==0.3.8",
    "chromadb>=0.5.0",
    "fastembed>=0.3.0",
    "langchain-chroma>=0.1.0",
    "tavily-python>=0.3.0",
    "langchain-tavily>=0.1.0",
    "arxiv>=2.1.0",
    "pypdf>=4.0.0",
    "streamlit>=1.38.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "pysqlite3-binary>=0.5.0; sys_platform == 'linux'",
    "langsmith>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
